--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,6 @@ style.
   table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
   }
   td, th {
   border: 2px solid #dddddd;
@@ -13,6 +12,7 @@ style.
   background-color: #dddddd;
   }
 dy
+h1 Kanban API Reference
 table
   tr
     th Endpoint
@@ -22,8 +22,6 @@ table
     th Sample Request
     |     
     th Sample Response
-    |     
-    th Description
   |   
   tr
     td
@@ -48,8 +46,6 @@ table
             "token": xxx
           }              
     |     
-    td
-  |   
   tr
     td
       code /api/v1/signin
@@ -71,9 +67,7 @@ table
           {
             "token": xxx
           }              
-    |     
-    td
-  |   
+    |  
   tr
     td
       code /api/v1/board
@@ -97,8 +91,6 @@ table
             "_columns": []
           }              
     |     
-    td
-  |   
   tr
     td
       code /api/v1/boards
@@ -124,8 +116,6 @@ table
             }
           ]              
     |     
-    td
-  |   
   tr
     td
       code /api/v1/board/5930bf9036997a231c1d0028
@@ -142,8 +132,6 @@ table
     |     
     td
     |     
-    td
-  |   
   tr
     td
       code /api/v1/board/5930bf9036997a231c1d0028
@@ -155,8 +143,6 @@ table
     |     
     td
     |     
-    td
-  |   
   tr
     td
       code /api/v1/board/5930bfdd36997a231c1d0029/column
@@ -185,8 +171,6 @@ table
             "electionId": "7fffffff0000000000000001"
           }              
     |     
-    td
-  |   
   tr
     td
       code /api/v1/board/5930bfdd36997a231c1d0029/columns
@@ -279,9 +263,6 @@ table
           }
         ]            
   |     
-  td
-  |   
-  |   
   tr
     td
       code
@@ -301,9 +282,6 @@ table
     |     
     td
     |     
-    td
-  |   
-  |   
   tr
     td
       code
@@ -321,5 +299,3 @@ table
       code
         pre.
                         
-    |     
-    td
