--- a/views/index.pug
+++ b/views/index.pug
@@ -4,12 +4,17 @@ style.
   border-collapse: collapse;
   }
   td, th {
-  border: 2px solid #dddddd;
+  border: 2px solid #11100f;
   text-align: left;
   padding: 8px;
+  background: #22201f
   }
   tr:nth-child(1) {
-  background-color: #dddddd;
+  background-color: #787878;
+  }
+  body{
+    background: #11100f;
+    color: #ffffff
   }
 dy
 h1 Kanban API Reference
@@ -277,7 +282,7 @@ table
       code
         pre.
           {
-            "text": "Richard, но в нашей команде нет фронтенд разработчика, только дизайнер, верстальщик и бэкенд разраб"
+            "text": "Richard, бла"
           }              
     |     
     td
